# duneextrapolation

./: .gitignore  CMakeLists.txt  NDDepos_gen_g4.root  NDPackets_projections.root  README.md  process_fixndhits_1view_cvn.sh
duneextrapolation/: CMakeLists.txt
duneextrapolation/MyNDFDTranslation/: CMakeLists.txt  LoadNDDataConfig.fcl  LoadNDData_module.cc  NDToFDConfig.fcl  NDToFD_module.cc  Projections.cxx  Projections.h  RecoDumpConfig.fcl  RecoDump_module.cc  Types.h
duneextrapolation/MyNDFDTranslation/run_fcls/: run_LoadNDData.fcl  run_LoadNDData_auto.sh  run_NDToFD.fcl  run_NDToFD_inference.fcl
fcl/: cvn1view_dune10kt_1x2x6.fcl  cvn1view_dune10kt_1x2x6_ndpacketsshifted.fcl  cvn1view_dune10kt_1x2x6_networktranslated.fcl  cvn1view_dune10kt_1x2x6_scaleND.fcl  cvn1view_dune10kt_1x2x6_scaleND_shifted.fcl  cvn1view_dune10kt_1x2x6_truetranslated.fcl  cvn1view_workflow.fcl  detsim_dune10kt_1x2x6_notpcsigproc_nooptdet.fcl  detsim_dune10kt_1x2x6_wirecell_refactored_nooptdet.fcl  detsim_dune10kt_1x2x6_wirecell_refactored_nooptdet_dropSC.fcl  detsim_dune10kt_1x2x6_wirecell_refactored_nooptdet_dropSC_fdlabel.fcl  detsim_dune10kt_wirecell_refactored_nooptdet.fcl  donothing_merge.fcl  ionandscint_dune10kt.fcl  ionandscint_dune10kt_1x2x6.fcl  ionandscint_elecdrift_dune10kt.fcl  ionandscint_elecdrift_dune10kt_1x2x6oldgeo.fcl  ionandscint_elecdrift_dune10kt_1x2x6oldgeooldg4params.fcl  reco3view_dune10kt_1x2x6_altdetsim.fcl  reco3view_dune10kt_1x2x6_altdetsim_gausscvn.fcl  reco3view_dune10kt_1x2x6_ndpackets.fcl  reco3view_dune10kt_1x2x6_networktranslated.fcl  reco3view_dune10kt_1x2x6_networktranslated_gausscvn.fcl  reco3view_dune10kt_1x2x6_truetranslated.fcl  reco3view_workflow.fcl  reco_dune10kt_1x2x6_loadeddepos.fcl  reco_dune10kt_1x2x6_ndpackets_inference.fcl  reco_dune10kt_1x2x6_networktranslated_inference.fcl  reco_dune10kt_1x2x6_truetranslated_inference.fcl  reco_workflow_dune10kt_rerefactored.fcl  standard_detsim_dune10kt_1x2x6_nooptdet.fcl  standard_detsim_dune10kt_1x2x6_nooptdet_saveraw.fcl  standard_reco_dune10kt_1x2x6_rerefactored.fcl  standard_reco_dune10kt_nu_1x2x6_nooptreco.fcl
job_scripts/: loaddepos_detsim_reco.sh  process_1view_cvn.sh  qsub_reco3view.sh  (+5 more)
(+195 files in other folders)
